--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@
 # REACT_APP_ENV=development
 # REACT_APP_API_URL=https://supermover-backend.azurewebsites.net/
 
-VITE_BASE_URL=https://supermover-backend.azurewebsites.net/api
-REACT_APP_API_URL=https://supermover-backend.azurewebsites.net/
+# VITE_BASE_URL=https://supermover-backend.azurewebsites.net/api
+VITE_BASE_URL=http://13.48.193.139:8000/api
+# REACT_APP_API_URL=https://supermover-backend.azurewebsites.net/
+REACT_APP_API_URL=http://13.48.193.139:8000/
 
     
